Version 0.9.1 (changes from aircrack-ng 0.9) - Released ?? ??? 2007:
* airodump-ng: wlan-ng driver now works again.
* airodump-ng: Fixed IP address when writing to CSV file
* aircrack-ng: Fixed WPA cracking on SMP computers
* airmon-ng: Fixed madwifi-ng wifiX detection (due to translation in ifconfig)
* patches: Added ACX injection patch
* patches: Updated rtl8187 patch for 2.6.21

Version 0.9 (changes from aircrack-ng 0.8) - Released 13 May 2007:
* aireplay-ng: Added new 'attack': injection test (--test)
* aireplay-ng: disallow injection with wlanng & kernel > 2.6.11
* airtun-ng: Fixed: an option wasn't shown in usage screen.
* airodump-ng (win): Fixed version numbering.
* airodump-ng (win): Changed first time messagebox
* aircrack-ng: Fixed: --help make aircrack-ng crash
* aircrack-ng: Added PTW attack (option: -z). It require full capture.
* airdecap-ng: now decrypt IEEE802.11 header with 802.11e header
* airmon-ng: Fixed orinoco card detection
* patches: updated zd1211rw patch for kernel 2.6.21
* patches: Added bcm43xx injection patch for kernel 2.6.20
* patches: updated rtl8187 patch (for new driver version).
* wzcook (win): now can work in silent mode (option: --silent)
* Makefile: added make zip (cygwin only)
* Makefile: fixed direct call to 'make install' or 'make strip' instead of 'make'
* GUI (win): Updated aircrack-ng tab and added an about tab.

Version 0.8 (changes from aircrack-ng 0.7) - Released 25 April 2007:
* aireplay-ng: Works on FreeBSD-CURRENT
* aircrack-ng: Fixed stdin dictionary usage
* aircrack-ng: Hardcode CPUs number to 1 in case detection fails
* aircrack-ng: Fixed too low trashvalue
* aireplay-ng: Fixed 384 bytes keystream output
* aireplay-ng: Fixed IV index bug
* aireplay-ng: Better error messages for -0 and -1
* airtun-ng: Works on FreeBSD
* airtun-ng: Fix compilation under FC6 (missing "linux/if.h" include).
* airodump-ng: Works on FreeBSD.
* airodump-ng: Added encryption filtering
* airodump-ng: Fixed a SIGSEGV